<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/editor_menu_undo"
        android:icon="@drawable/ic_editor_undo"
        android:orderInCategory="1"
        android:title="@string/editor_undo"
        app:showAsAction="always" />

    <item
        android:id="@+id/editor_menu_redo"
        android:icon="@drawable/ic_editor_redo"
        android:orderInCategory="2"
        android:title="@string/editor_redo"
        app:showAsAction="always" />

    <item
        android:id="@+id/editor_menu_run"
        android:icon="@drawable/ic_editor_run"
        android:orderInCategory="3"
        android:title="@string/editor_run_test"
        app:showAsAction="always" />

    <item
        android:id="@+id/editor_menu_save"
        android:orderInCategory="4"
        android:icon="@drawable/ic_save"
        android:title="@string/editor_save"
        app:showAsAction="always" />

    <!-- editor_toggle_wrap / editor_toggle_monospace: KHÔNG khai báo ở đây nữa - trước đây
         showAsAction="never" khiến 2 mục này rơi vào overflow MẶC ĐỊNH của hệ thống (giao
         diện khác hẳn popup "⋮" ở ActionPage/MainActivity). Giờ dùng chung 1 nút "⋮" tự dựng
         bằng code (SpinnerPopupHelper.buildOverflowMenuButton) + popup tự dựng
         (SpinnerPopupHelper.showListPopup, có nền kính mờ) - xem
         TextEditorActivity.setupOverflowMenuButton() - để đồng bộ giao diện với các popup
         menu khác trong app. -->
</menu>
