<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/dialogRoot">

    <LinearLayout
        android:background="@drawable/confirm_dialog_bg"
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_title"
                android:textColor="#aaaaaa"
                android:textSize="11sp" />
            <CheckBox
                    android:textSize="11dp"
                    android:textColor="#BB888888"
                    android:id="@+id/notification_ui"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notification_ui"
                    android:textAlignment="textEnd"
                    android:layoutDirection="rtl" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/appliction_desc"
            android:textColor="@color/colorAccent"
            android:textSize="11dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/appliction_name"
            android:textAlignment="center"
            android:textSize="36dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="11dp"
            android:text="@string/appliction_author" />

        <LinearLayout
            android:gravity="bottom"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_height="wrap_content">
        
            <TextView
                android:id="@+id/theme_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:textSize="12sp"
                android:textColor="#888"
                android:drawableEnd="@drawable/abc_spinner_mtrl_am_alpha"
                android:drawablePadding="6dp"
                android:layout_marginTop="4dp"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:clickable="true"
                android:singleLine="true"
                android:ellipsize="end"
                android:focusable="true"/>
        </LinearLayout>
            <LinearLayout
                android:paddingBottom="4dp"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="50"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/authorText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:text="@string/author_name"
                    android:textAlignment="textEnd"
                    android:textColor="#aaaaaa"
                    android:textSize="11sp" />

                <TextView
                    android:id="@+id/engineText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/engine_version_name"
                    android:textAlignment="textEnd"
                    android:textColor="#aaaaaa"
                    android:textSize="11sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>