<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:overScrollMode="never"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <LinearLayout
            android:alpha="0.9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="150dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/krscript_item_ripple_kon"
            android:orientation="vertical">

            <TextView
                android:id="@+id/confirm_title"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="16dp"
                style="@style/textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm_title" />
            <TextView
                android:id="@+id/confirm_message"
                android:textIsSelectable="true"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="16dp"
                android:text="@string/confirm_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@+id/confirm_custom_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
                
            <!-- Đường kẻ phân cách -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:background="?android:attr/listDivider" />
                
            <LinearLayout
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_confirm"
                    style="@style/dialogConfirmBtn"
                    android:text="@string/btn_confirm">
                </Button>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
